fix UI and directory structure

--- a/src/main/webapp/WEB-INF/views/authenticate/login.html
+++ b/src/main/webapp/WEB-INF/views/authenticate/login.html
@@ -19,7 +19,7 @@
         <img alt="Exterior view of a modern hospital building with clear blue sky"
              class="object-cover w-full h-full"
              height="500"
-             src="/images/model_login.png"
+             th:src="@{/images/model_login.png}"
              width="400"/>
     </div>
 
@@ -43,7 +43,7 @@
             </label>
         </div>
 
-        <!-- Số điện thoại với chọn quốc gia -->
+        <!-- Số điện thoại -->
         <div id="phoneGroup" class="relative mb-4 flex gap-2 items-center">
             <input th:field="*{phonenumber}"
                    id="phoneInput"
@@ -94,47 +94,6 @@
     </form>
 </div>
 <script th:src="@{/js/alert.js}"></script>
-<script th:inline="javascript">
-    const phoneGroup = document.getElementById('phoneGroup');
-    const emailGroup = document.getElementById('emailGroup');
-    const phoneInput = document.getElementById('phoneInput');
-    const emailInput = document.getElementById('emailInput');
-    const loginForm = document.getElementById('loginForm');
-
-    document.querySelectorAll('input[name="loginMethod"]').forEach(radio => {
-        radio.addEventListener('change', () => {
-            if (radio.value === 'phone' && radio.checked) {
-                phoneGroup.classList.remove('hidden');
-                emailGroup.classList.add('hidden');
-                phoneInput.setAttribute('required', 'required');
-                emailInput.removeAttribute('required');
-                emailInput.value = '';
-            } else if (radio.value === 'email' && radio.checked) {
-                emailGroup.classList.remove('hidden');
-                phoneGroup.classList.add('hidden');
-                emailInput.setAttribute('required', 'required');
-                phoneInput.removeAttribute('required');
-                phoneInput.value = '';
-            }
-        });
-    });
-    let message = [[${messageLogin}]];
-    if (message) {
-        window.showSuccess(message);
-    }
-
-    loginForm.addEventListener('submit', (e) => {
-        const selectedMethod = document.querySelector('input[name="loginMethod"]:checked').value;
-        if (selectedMethod === 'phone' && !phoneInput.value.trim()) {
-            e.preventDefault();
-            showError('Vui lòng nhập số điện thoại!')
-            phoneInput.focus();
-        } else if (selectedMethod === 'email' && !emailInput.value.trim()) {
-            e.preventDefault();
-            showError("Vui lòng nhập email!")
-            emailInput.focus();
-        }
-    });
-</script>
+<script th:scr="@{/js/auth/login.js}"></script>
 </body>
 </html>
