--- a/src/main/webapp/WEB-INF/views/admin/fragments/sidebar.html
+++ b/src/main/webapp/WEB-INF/views/admin/fragments/sidebar.html
@@ -1,5 +1,5 @@
 
-<div th:fragment="sidebar" class="sidebar fixed top-0 left-0 h-full w-64 bg-[#d9e9f8] p-6 overflow-y-auto shadow-lg z-20 transition-transform duration-300 ease-in-out" id="sidebar">
+<div th:fragment="sidebar" class="sidebar fixed top-0 left-0 h-full w-64 bg-[#d9e9f8] p-6 overflow-y-auto shadow-lg z-40 transition-transform duration-300 ease-in-out" id="sidebar">
   <div class="sidebar-logo mb-8">
     <img
             alt="Logo bệnh viện màu xanh dương với biểu tượng chữ thập y tế hiện đại"
@@ -10,13 +10,13 @@
   </div>
   <nav class="flex flex-col space-y-8">
     <a class="sidebar-link" href="/manageAccount/approveUser" title="Quản lý tài khoản">
-      <i class="fas fa-user-injured sidebar-icon text-blue-600"></i> Quản lý tài khoản
+      <i class="fas fa-user-injured sidebar-icon text-blue-600"></i> Duyệt tài khoản
     </a>
     <a class="sidebar-link" href="#" title="Hồ sơ bệnh án">
       <i class="fas fa-file-medical-alt sidebar-icon text-green-600"></i> Hồ sơ bệnh án
     </a>
-    <a class="sidebar-link" href="/manageAccount/testUser/3" title="Quản lý nhân viên">
-      <i class="fas fa-users-cog sidebar-icon text-purple-600"></i> Quản lý nhân viên
+    <a class="sidebar-link" href="/manageAccount/listUser" title="Quản lý nhân viên">
+      <i class="fas fa-users-cog sidebar-icon text-purple-600"></i> Quản lý tài khoản
     </a>
     <a class="sidebar-link" href="#" title="Quản lý bác sĩ">
       <i class="fas fa-user-md sidebar-icon text-red-600"></i> Quản lý bác sĩ
