--- a/src/main/webapp/WEB-INF/views/admin/home.html
+++ b/src/main/webapp/WEB-INF/views/admin/home.html
@@ -68,6 +68,6 @@
     <div th:replace="admin/fragments/footer :: footer"></div>
 
 </div>
-<script th:src="@{/js/homeAdmin.js}"></script>
+    <script th:src="@{/js/admin/homeAdmin.js}"></script>
 </body>
 </html>
